@@ -164,6 +164,7 @@ Localization
         #LOC_BDArmory_Settings_GenerateCleanSave = Generate Clean Save
         #LOC_BDArmory_Settings_AutoDisableUI = Auto-Disable UI
         #LOC_BDArmory_Settings_AutoResumeTournaments = Auto-Resume Tournaments
+        #LOC_BDArmory_Settings_AutoResumeContinuousSpawn = Auto-Resume Cts Spawn
         #LOC_BDArmory_Settings_AutoQuitAtEndOfTournament = Auto-Quit On Tournament End
         #LOC_BDArmory_Settings_AutoQuitMemoryUsage = Auto-Quit Memory Threshold
         #LOC_BDArmory_Settings_CurrentMemoryUsageEstimate = Current Memory Usage Estimate
