@@ -33,29 +33,37 @@ namespace BDArmory.Settings
             using (IEnumerator<FieldInfo> field = typeof(BDArmorySettings).GetFields().AsEnumerable().GetEnumerator())
                 while (field.MoveNext())
                 {
-                    if (field.Current == null) continue;
-                    if (!field.Current.IsDefined(typeof(BDAPersistentSettingsField), false)) continue;
+                    try
+                    {
+                        if (field.Current == null) continue;
+                        if (!field.Current.IsDefined(typeof(BDAPersistentSettingsField), false)) continue;
 
-                    var fieldValue = field.Current.GetValue(null);
-                    if (fieldValue.GetType() == typeof(Vector3d))
-                    {
-                        settings.SetValue(field.Current.Name, ((Vector3d)fieldValue).ToString("G"), true);
+                        var fieldValue = field.Current.GetValue(null);
+                        if (fieldValue.GetType() == typeof(Vector3d))
+                        {
+                            settings.SetValue(field.Current.Name, ((Vector3d)fieldValue).ToString("G"), true);
+                        }
+                        else if (fieldValue.GetType() == typeof(Vector2d))
+                        {
+                            settings.SetValue(field.Current.Name, ((Vector2d)fieldValue).ToString("G"), true);
+                        }
+                        else if (fieldValue.GetType() == typeof(Vector2))
+                        {
+                            settings.SetValue(field.Current.Name, ((Vector2)fieldValue).ToString("G"), true);
+                        }
+                        else if (fieldValue.GetType() == typeof(List<string>))
+                        {
+                            settings.SetValue(field.Current.Name, string.Join("; ", (List<string>)fieldValue), true);
+                        }
+                        else
+                        {
+                            settings.SetValue(field.Current.Name, fieldValue.ToString(), true);
+                        }
                     }
-                    else if (fieldValue.GetType() == typeof(Vector2d))
+                    catch
                     {
-                        settings.SetValue(field.Current.Name, ((Vector2d)fieldValue).ToString("G"), true);
-                    }
-                    else if (fieldValue.GetType() == typeof(Vector2))
-                    {
-                        settings.SetValue(field.Current.Name, ((Vector2)fieldValue).ToString("G"), true);
-                    }
-                    else if (fieldValue.GetType() == typeof(List<string>))
-                    {
-                        settings.SetValue(field.Current.Name, string.Join("; ", (List<string>)fieldValue), true);
-                    }
-                    else
-                    {
-                        settings.SetValue(field.Current.Name, fieldValue.ToString(), true);
+                        Debug.LogError($"[BDArmory.BDAPersistentSettingsField]: Exception triggered while trying to save field {field.Current.Name} with value {field.Current.GetValue(null)}");
+                        throw;
                     }
                 }
             fileNode.Save(path);
