@@ -43,6 +43,7 @@
 		- EMP warheads only detonate when armed and no longer do additional damage.
 - Competition:
 	- Add an option for the continuous spawn central point to follow the centroid of surviving craft (biased back towards the original spawn point).
+	- Add an option to automatically resume continuous spawn and to automatically shutdown KSP when continuous spawn ends due to having fewer than 2 craft left.
 
 v1.6.9.0
 IMPROVEMENTS / FIXES
